--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/ReactToastify.css"/>
+
     <title>React App</title>
 </head>
 <body>
