--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/ReactToastify.css"/>
+    <link rel="shortcut icon" href="film_reel.ico"/>
 
-    <title>React App</title>
+    <title>Movie information</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
